[gd_scene load_steps=4 format=3 uid="uid://46bjir5pnonb"]

[ext_resource type="Script" path="res://param_layer.gd" id="1_p53sf"]

[sub_resource type="Gradient" id="Gradient_jdcv3"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.172619, 1)
colors = PackedColorArray(0.413784, 0.760641, 0.662593, 1, 0.42056, 0.778301, 0.951745, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_425t1"]
gradient = SubResource("Gradient_jdcv3")

[node name="ParamLayer" type="CanvasLayer"]
script = ExtResource("1_p53sf")

[node name="ParamMenu" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="ParamMenu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 28.8
anchor_bottom = 16.2
offset_right = -32025.6
offset_bottom = -9849.6
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_425t1")

[node name="ButtonContainer" type="VBoxContainer" parent="ParamMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.413
anchor_top = 0.269
anchor_right = 0.587
anchor_bottom = 0.39
offset_left = 0.223969
offset_top = -0.312012
offset_right = -0.223999
offset_bottom = 0.279984
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="ParamMenu/ButtonContainer"]
layout_mode = 2
text = "Reprendre"

[node name="KeysButton" type="Button" parent="ParamMenu/ButtonContainer"]
layout_mode = 2
text = "Touches"

[node name="HBoxContainer" type="HBoxContainer" parent="ParamMenu/ButtonContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="ParamMenu/ButtonContainer/HBoxContainer"]
layout_mode = 2
text = "dur√©e:"

[node name="SpinBox" type="SpinBox" parent="ParamMenu/ButtonContainer/HBoxContainer"]
layout_mode = 2
min_value = 15.0
max_value = 120.0
value = 30.0
custom_arrow_step = 1.0

[node name="Label" type="Label" parent="ParamMenu/ButtonContainer/HBoxContainer"]
layout_mode = 2
text = "mode:"

[node name="OptionButton" type="OptionButton" parent="ParamMenu/ButtonContainer/HBoxContainer"]
layout_mode = 2
item_count = 2
selected = 0
allow_reselect = true
popup/item_0/text = "Simple"
popup/item_0/id = 0
popup/item_1/text = "Alternate"
popup/item_1/id = 1

[connection signal="pressed" from="ParamMenu/ButtonContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="ParamMenu/ButtonContainer/KeysButton" to="." method="_on_keys_button_pressed"]
